@@ -7,6 +7,7 @@
 <!ENTITY gst-plugins-good-version-stable "0.10.2">
 <!ENTITY gst-plugins-ugly-version-stable "0.10.3">
 <!ENTITY gst-plugins-bad-version-stable "0.10.1">
+<!ENTITY gnonlin-version-stable "0.10.1">
 
 <!ENTITY gst-version-devel "0.9.6">
 <!ENTITY gst-plugins-base-version-devel "0.9.6">
