@@ -18,21 +18,38 @@ This module contains a set of plug-ins for GStreamer to ease the
 creation of multimedia editors, or any other application where a
 timeline-oriented use of GStreamer makes sense.
 </p>
+
+<p>
+These elements include:
+<dl>
+<dt>gnlsource</dt> <dd>An element for using source elements/bins in a GnlComposition</dd>
+<dt>gnlfilesource</dt>
+<dd>A higher-level element for using a uri in a GnlComposition</dd>
+<dt>gnlcomposition</dt>
+<dd>A container element that handles GNonLin objects</dd>
+</dl>
+</p>
+
   </intro>
   <features>
-    <feature></feature>
+    <feature>Bug and memleak fixes</feature>
+    <feature>unit testing added</feature>
   </features>
 
   <applications>
 GNonLin is primarily used by PiTiVi (http://www.pitivi.org/)
   </applications>
-    <contributors>
+            <contributors>
 	<person>Christian Schaller</person>
 	<person>Edward Hervey</person>
 	<person>Thomas Vander Stichele</person>
 	<person>Wim Taymans</person>
 	<person>Wouter Paesen</person>
   </contributors>
+
+
+
+
 
 
 <!--
@@ -43,6 +60,14 @@ GNonLin is primarily used by PiTiVi (http://www.pitivi.org/)
     </depreciations>
   </api>
 -->
+
+  
+
+  
+
+  
+
+  
 
   
 
